Update 3.03 Select Controls based upon system security requirements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.03 Select Controls based upon system security requirements.md
@@ -140,5 +140,66 @@ flowchart LR
 
  :necktie: PDCA ensures that security controls remain effective as threats evolve.
 
- 
+ ### Open Questions ###
+
+1. How does the TCSEC (Orange Book) influence the selection of security controls for an information system?
+<details>
+  <summary>Show answer</summary>
+TCSEC was one of the first frameworks to provide guidelines for selecting security controls based on the security classification of a system. Systems are categorized into levels (e.g., A, B, C, D) based on their security functionality, with each level requiring specific controls. These controls ensure that systems meet necessary standards for confidentiality, integrity, and availability, and they provide a structured approach to selecting security mechanisms based on the system's classification.
+</details>
+
+2. What role does ITSEC play in determining the appropriate security controls for different system categories?
+<details>
+  <summary>Show answer</summary>
+ITSEC expanded on TCSEC by offering a more flexible and detailed set of guidelines for evaluating security in systems. It introduces the concept of "assurance levels," which refer to the confidence that can be placed in the effectiveness of security controls. ITSEC emphasizes both functional security requirements and assurance measures, which guide the selection of controls that meet both the system’s security needs and evaluation criteria.
+</details>
+
+3. How do Common Criteria (CC) certifications impact the selection of security controls in both commercial and governmental environments?
+<details>
+  <summary>Show answer</summary>
+Common Criteria is a global standard for evaluating and certifying information security products and systems. It focuses on defining functional security requirements and providing assurance levels based on system evaluation. When selecting security controls, CC provides a detailed set of guidelines for assessing the functionality, trustworthiness, and security levels needed for a particular system, ensuring that these controls are appropriately mapped to the system's security goals.
+</details>
+
+4. How can security frameworks, such as NIST or ISO 27001, guide the process of selecting security controls?
+<details>
+  <summary>Show answer</summary>
+Security frameworks like NIST’s SP 800-53, ISO 27001, and COBIT provide structured, comprehensive approaches for selecting security controls across various sectors. These frameworks help organizations align their security controls with best practices, regulatory requirements, and operational needs. By adopting a security framework, organizations can systematically select and implement controls that meet both security and business requirements.
+</details>
+
+5. In what ways does the Deming Cycle (Plan-Do-Check-Act) help in continuously selecting and refining security controls?
+<details>
+  <summary>Show answer</summary>
+The Deming Cycle emphasizes continuous improvement, and it can be applied to the process of selecting and refining security controls. In the "Plan" phase, organizations assess their security requirements and select appropriate controls. In the "Do" phase, the controls are implemented, and in the "Check" phase, their effectiveness is evaluated. In the "Act" phase, adjustments are made to improve the controls, making it a cyclical and adaptive process that ensures controls remain effective in the face of evolving threats.
+</details>
+
+6. How does the classification of a system under TCSEC affect the types of security controls selected for it?
+<details>
+  <summary>Show answer</summary>
+TCSEC categorizes systems into different security classes, such as C2, B2, or A1, with each class requiring specific security controls. For example, higher classifications such as A1 require stringent security features like formal methods and detailed auditing mechanisms, while lower classifications, such as C2, may have less demanding requirements. This classification helps determine the necessary controls based on the system's sensitivity and criticality.
+</details>
+
+7. How do different security frameworks (e.g., NIST, ISO 27001, COBIT) address the selection of security controls across various layers of an organization’s IT environment?
+<details>
+  <summary>Show answer</summary>
+Frameworks like NIST and ISO 27001 offer guidance on selecting controls across multiple layers, such as governance, operations, and technology. NIST’s CSF (Cybersecurity Framework) helps organizations assess risk and select controls for all areas of IT security, from identity management to incident response. These frameworks align security controls with business objectives, ensuring comprehensive protection and compliance across the organization.
+</details>
+
+8. What challenges might arise when aligning security controls with international standards like ITSEC or Common Criteria?
+<details>
+  <summary>Show answer</summary>
+One of the challenges of aligning security controls with ITSEC and CC standards is their international scope and sometimes differing interpretations of security requirements. For example, while ITSEC is more focused on assurance, Common Criteria emphasizes both functional requirements and trust levels. These differing focuses can make it difficult to harmonize security controls across diverse regulatory environments or multi-national organizations.
+</details>
+
+9. How can the Deming Cycle be applied to the iterative process of selecting, testing, and improving security controls over time?
+<details>
+  <summary>Show answer</summary>
+The Deming Cycle is integral in continuously improving security controls by regularly assessing and refining them. Organizations can use the "Check" phase to conduct regular audits and penetration tests, ensuring that controls are still effective. As the threat landscape evolves, the "Act" phase allows security teams to implement updates, making sure that controls are up-to-date and relevant.
+</details>
+
+10. How do TCSEC, ITSEC, and CC standards complement or conflict with each other when selecting security controls for a complex system?
+<details>
+  <summary>Show answer</summary>
+TCSEC, ITSEC, and CC provide complementary guidance for selecting security controls by addressing both functional security needs and assurance levels. However, they can sometimes conflict in terms of focus. For example, TCSEC’s focus on trusted computing environments might not fully align with CC’s more flexible, vendor-driven approach.
+</details>
+
 
