Update 8.D.1 Databases Basics.md

--- a/DOMAIN 8: Software Development Security/8.D.1 Databases Basics.md
+++ b/DOMAIN 8: Software Development Security/8.D.1 Databases Basics.md
@@ -21,8 +21,11 @@ A DBMS works with a few key pieces:
 For a database to be reliable, it needs to follow something called the **ACID** properties. These are four principles that keep data safe and accurate, even if something goes wrong like a crash or power outage.
 
 -**Atomicity** ensures that a transaction is all-or-nothing—if one part fails, the whole thing is rolled back.
+
 -**Consistency** means data must always follow rules and constraints—no corrupt or half-finished records.
+
 -**Isolation ensures** that multiple people working at the same time won’t mess up each other’s data.
+
 -**Durability** guarantees that once something is saved, it stays saved—even if the system crashes right after.
 
 Because databases are so important, working with them has become a major career path. Some people become **database administrators (DBAs)** who keep the system running smoothly and securely. Others are **data analysts** who dive into the stored information to find insights and trends. You also have **data architects** who design how a database should be structured, and **developers** who write the code to connect apps to the data. All these roles help organizations get the most out of their data while keeping it safe and organized.
@@ -46,5 +49,117 @@ graph TD
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+#### Network Database #### 
+This one is more flexible: a child can belong to multiple parents. Imagine students joining several clubs and each club with many students. It functions like a web of connections. It handles many-to-many relationships well but can get complex.
+
+```mermaid
+graph LR
+  Student1 -- member --> ClubA
+  Student2 -- member --> ClubA
+  Student2 -- member --> ClubB
+  Student3 -- member --> ClubB
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+#### Relational Database ####
+Today’s most common type: data is stored in tables made of rows and columns. Tables link to each other using keys (like employee ID or order number). This model is flexible, widely supported, and works well with SQL. Systems like MySQL, PostgreSQL, and Oracle use it.
+
+```mermaid
+graph TD
+  TableA[Customers]
+  TableB[Orders]
+  TableA -->|customer_id| TableB
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+#### Object-Oriented Database ####
+Here, data is treated just like objects in your code—they include both data and methods. You store things like Person or Order as objects, not rows. This is used in applications where working with complex data types is common—like multimedia or software simulations.
+
+```mermaid
+classDiagram
+  class Person {
+    +string name
+    +string address
+    +getAddress()
+  }
+
+  class Order {
+    +int orderId
+    +Person customer
+    +calculateTotal()
+  }
+     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+
+#### NoSQL (Non-Relational) Databases ####
+This is a broad category covering databases that don't use the table-and-row model. It includes:
+
+- Document stores (e.g., JSON documents in MongoDB)
+
+- Key-value stores (like Redis)
+
+- Wide-column stores (e.g., Cassandra)
+
+- Graph databases (e.g., Neo4j)
+
+Here’s a simple graph model for a graph database example:
+
+```mermaid
+graph LR
+  Alice((Alice))
+  Bob((Bob))
+  Alice -->|FRIEND| Bob
+  Bob -->|FRIEND| Charlie((Charlie))
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+These are great for unstructured or semi-structured data, scalability, and special use cases like building social networks or managing logs.
+
+#### Cloud Databases ####
+These run on cloud platforms (AWS, Azure, Google) and can be relational or NoSQL. They offer auto-scaling, high availability, and ease of management. Ideal for agile apps or businesses without their own infrastructure.
+
+```mermaid
+graph TD
+  ClientApp --> CloudDB[(Cloud Database)]
+  ClientApp2 --> CloudDB
+  CloudDB --> BackupService
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+#### Multi-Model Databases ####
+These support more than one data model—like relational, document, and graph—within a single system. They let developers pick the best data model for each part of an app, all under one roof.
+
+```mermaid
+graph TB
+  MultiDB --> Relational
+  MultiDB --> Document
+  MultiDB --> Graph
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+The following table recap all that we have seen so far.
+
+| **Database Type**       | **How Data is Organized**                          | **Strengths**                                  | **Considerations**                             |
+|-------------------------|-----------------------------------------------------|------------------------------------------------|------------------------------------------------|
+| Hierarchical            | Parent‑child tree                                   | Fast simple hierarchy                          | Rigid, one-to-many only                        |
+| Network                 | Web of records linked many-to-many                  | Flexible relationship mapping                  | Complex navigation logic                       |
+| Relational              | Tables linked via keys                              | Mature, SQL, transactional, consistent         | Joins can be expensive at scale                |
+| Object-Oriented         | Objects with attributes & methods                   | Natural for OO code, supports complex types    | Less common, not standardized                  |
+| NoSQL (Document/Graph)  | JSON docs, key-value, graph nodes/edges             | Scalable, flexible schema                      | Varies by vendor, some consistency trade-offs  |
+| Cloud                   | Any model, hosted online with managed infra         | Auto-scale, managed backups, remote access     | Vendor lock-in, cost considerations            |
+| Multi-Model             | Multiple data models in one engine                  | Versatile, single platform for varied needs    | Can be complex, newer technology               |
+
+
+### SQL Basics ###
+
+
 
 
