Update 8.D.1 Databases Basics.md

--- a/DOMAIN 8: Software Development Security/8.D.1 Databases Basics.md
+++ b/DOMAIN 8: Software Development Security/8.D.1 Databases Basics.md
@@ -160,6 +160,99 @@ The following table recap all that we have seen so far.
 
 ### SQL Basics ###
 
+If you want to talk to a database, you use SQL — which stands for Structured Query Language. Think of it like giving instructions to a super-organized filing system.
+
+#### Data Definition Language (DDL) – For Building the Structure ####
+
+These commands are used to create or change tables and databases — the “blueprints” of your data system. Imagine you’re setting up folders and forms before any data is added.
+
+Example:
+
+- CREATE TABLE employees (...) → Create a new table.
+
+- ALTER TABLE employees ADD email VARCHAR(100) → Add a new column.
+
+- DROP DATABASE old_data → Delete a whole database.
+
+| **Command**       | **Purpose**                | **Example**                               |
+| ----------------- | -------------------------- | ----------------------------------------- |
+| `CREATE TABLE`    | Creates a new table        | `CREATE TABLE users (id INT, name TEXT);` |
+| `ALTER TABLE`     | Adds or changes columns    | `ALTER TABLE users ADD email TEXT;`       |
+| `DROP TABLE`      | Deletes a table completely | `DROP TABLE users;`                       |
+| `CREATE DATABASE` | Makes a new database       | `CREATE DATABASE company_db;`             |
+| `DROP DATABASE`   | Deletes an entire database | `DROP DATABASE test_db;`                  |
 
 
+#### Data Manipulation Language (DML) – For Working With the Data ####
+
+These commands let you add, update, or remove data inside your tables — basically filling out or changing forms in your data folder.
+
+Example:
+
+- INSERT INTO employees VALUES (...) → Add new data.
+
+- UPDATE employees SET email = 'a@b.com' WHERE id = 1 → Change data.
+
+- DELETE FROM employees WHERE id = 5 → Remove data.
+
+| **Command**   | **Purpose**            | **Example**                                   |
+| ------------- | ---------------------- | --------------------------------------------- |
+| `INSERT INTO` | Adds a new row of data | `INSERT INTO users VALUES (1, 'Alice');`      |
+| `UPDATE`      | Modifies existing data | `UPDATE users SET name = 'Bob' WHERE id = 1;` |
+| `DELETE`      | Removes rows           | `DELETE FROM users WHERE id = 1;`             |
+
+
+#### Data Query Language (DQL) – For Finding Things ####
+
+Mostly this means the SELECT command. It’s how you ask questions to your database and get answers.
+
+Example:
+
+- SELECT * FROM employees → Show all employees.
+
+- SELECT name FROM employees WHERE department = 'Sales' → Show sales staff.
+
+| **Command** | **Purpose**                 | **Example**                                       |
+| ----------- | --------------------------- | ------------------------------------------------- |
+| `SELECT`    | Retrieves data from a table | `SELECT * FROM users;`                            |
+| `WHERE`     | Filters query results       | `SELECT * FROM users WHERE name = 'Alice';`       |
+| `ORDER BY`  | Sorts results               | `SELECT * FROM users ORDER BY name ASC;`          |
+| `GROUP BY`  | Groups data for aggregation | `SELECT dept, COUNT(*) FROM users GROUP BY dept;` |
+| `LIMIT`     | Limits number of results    | `SELECT * FROM users LIMIT 10;`                   |
+
+
+#### Data Control Language (DCL) – For Permissions
+
+These commands control who can see or change things in the database. It's like giving someone a key to a cabinet.
+
+Example:
+
+- GRANT SELECT ON employees TO user1 → Let someone view data.
+
+- REVOKE UPDATE ON employees FROM user2 → Take away editing rights.
+
+| **Command** | **Purpose**               | **Example**                         |
+| ----------- | ------------------------- | ----------------------------------- |
+| `GRANT`     | Gives access to users     | `GRANT SELECT ON users TO john;`    |
+| `REVOKE`    | Removes access from users | `REVOKE SELECT ON users FROM john;` |
+
+
+#### Transaction Control Language (TCL) – For Saving or Canceling Changes ####
+
+These commands help you confirm or undo changes. Like hitting save or undo in a Word document.
+
+Example:
+
+COMMIT → Save all changes.
+
+ROLLBACK → Undo changes.
+
+SAVEPOINT → Set a place you can go back to later.
+
+| **Command** | **Purpose**                  | **Example**      |
+| ----------- | ---------------------------- | ---------------- |
+| `BEGIN`     | Starts a transaction         | `BEGIN;`         |
+| `COMMIT`    | Saves all changes            | `COMMIT;`        |
+| `ROLLBACK`  | Cancels changes              | `ROLLBACK;`      |
+| `SAVEPOINT` | Sets a point to roll back to | `SAVEPOINT sp1;` |
 
