Update 8.D.1 Databases Basics.md

--- a/DOMAIN 8: Software Development Security/8.D.1 Databases Basics.md
+++ b/DOMAIN 8: Software Development Security/8.D.1 Databases Basics.md
@@ -91,8 +91,10 @@ classDiagram
     +Person customer
     +calculateTotal()
   }
-     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
+  classDef default fill:#f0f0f0,color:#000000,stroke:#444444,stroke-width:1px
+  classDef node fill:#e0e0e0,color:#000000,stroke:#666666,stroke-width:1px
+  class Person,Order node
 ```
 
 
