Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -10,3 +10,31 @@ Cryptography serves several crucial objectives in cybersecurity:
 - **Authenticity** allows systems to confirm the identities of users and devices. Mechanisms like digital signatures and public-key infrastructure (PKI) help in verifying the legitimacy of communication parties.
 - **Non-repudiation** prevents a sender from denying having sent a message. Digital signatures, combined with public-key cryptography, provide undeniable proof of message origin.
 
+:link: Review [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security) the five pillars of Information Security
+
+To understand cryptography, it is important to grasp several fundamental concepts that define how encryption and decryption work.
+At the core of cryptography is the encryption process, which takes **plaintext** (original readable data) and transforms it into **ciphertext** using an algorithm and a key. The recipient then uses a decryption process to convert the ciphertext back into plaintext using the correct key. The security of the system depends on the complexity of the algorithm and the secrecy of the key.
+
+```mermaid
+graph LR
+    A[Plaintext<br>(Original Data)] --> B[Encryption<br>Algorithm + Key]
+    B --> C[Ciphertext<br>(Unreadable Data)]
+    C --> D[Decryption<br>Algorithm + Key]
+    D --> E[Plaintext<br>(Readable Data Again)]
+
+    subgraph Core Concepts
+        F[Algorithm: Defines transformation rules]
+        G[Key: Secret value controlling encryption/decryption]
+        H[Security: Depends on algorithm complexity + key secrecy]
+    end
+
+    B --- F
+    B --- G
+    D --- G
+    H -.-> B
+    H -.-> D
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
