Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -17,10 +17,10 @@ At the core of cryptography is the encryption process, which takes **plaintext**
 
 ```mermaid
 graph LR
-    A[Plaintext<br>(Original Data)] --> B[Encryption<br>Algorithm + Key]
-    B --> C[Ciphertext<br>(Unreadable Data)]
-    C --> D[Decryption<br>Algorithm + Key]
-    D --> E[Plaintext<br>(Readable Data Again)]
+    A[Plaintext - Original Data] --> B[Encryption:Algorithm + Key]
+    B --> C[Ciphertext - Unreadable Data]
+    C --> D[Decryption - Algorithm + Key]
+    D --> E[Plaintext - Readable Data Again]
 
     subgraph Core Concepts
         F[Algorithm: Defines transformation rules]
