Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -62,16 +62,37 @@ The following table recaps Modular Arithmetic (used in block ciphers, RSA, ECC):
 
 A **key** is the most critical component of an encryption system. It acts as a secret value that determines how plaintext is transformed into ciphertext. The **key size** (e.g., 128-bit, 256-bit) directly impacts security; larger keys offer stronger encryption but require more computational resources. The **key space** refers to the total number of possible keys that an encryption algorithm can use. A larger key space makes brute-force attacks impractical, as trying every possible key would take an unreasonable amount of time.
 
-:bulb: For example a key in AES-128 is 128 bits (16 bytes) long. An example of a 128-bit key in hexadecimal format:
+:bulb: For example a key in AES-128 is 128 bits (16 bytes) long. An example of a 128-bit key in hexadecimal format is:
+
 3A 5F 67 89 AB CD EF 12 34 56 78 9A BC DE F0 12
-Key Size:
-128 bits (16 bytes = 16 × 8 = 128 bits).
-The key size determines the strength of encryption. Larger key sizes increase security but also require more processing power.
-Key Space:
-The total number of possible keys is 2^128 (because each bit in the key can be either 0 or 1).
+
+Here the Key Size is 128 bits long (16 bytes = 16 × 8 = 128 bits). The key size determines the strength of encryption. Larger key sizes increase security but also require more processing power.
+
+The Key Space (The total number of possible keys) is 2^128 (because each bit in the key can be either 0 or 1).
 2^128 ≈ 3.4 × 10^38 possible keys—an astronomically large number!
 
 The **work factor** of an encryption algorithm represents the estimated time and computational power needed to break it. If breaking an encryption system requires more computational power than is feasible within a reasonable timeframe, it is considered secure. This is why modern cryptographic standards, such as AES-256, have high work factors that make brute-force attacks virtually impossible.
 
+```mermaid
+flowchart LR
+    A[Plaintext Input] --> B[AddRoundKey - Key Mixing]
+    B --> C[SubBytes - Confusion via S-boxes]
+    C --> D[ShiftRows + MixColumns - Diffusion]
+    D --> E[AddRoundKey - Key Mixing]
+    E --> F{More Rounds?}
+    F -- Yes --> C
+    F -- No --> G[Ciphertext Output]
+
+    subgraph Key Points
+        H[Confusion: Non-linear substitution<br>hides key↔ciphertext relationship]
+        I[Diffusion: Spreads each input bit<br>across output block (avalanche effect)]
+    end
+
+    C --- H
+    D --- I
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
 
 
