Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -85,7 +85,7 @@ flowchart LR
 
     subgraph Key Points
         H[Confusion: Non-linear substitution<br>hides key↔ciphertext relationship]
-        I[Diffusion: Spreads each input bit<br>across output block (avalanche effect)]
+        I[Diffusion: Spreads each input bit<br>across output block - avalanche effect]
     end
 
     C --- H
