Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -93,10 +93,77 @@ Modern encryption combines both methods in complex ways to create highly secure 
 | Cipher Type            | How It Works                                                       | Practical Example (Plaintext: "HELLO WORLD") | Ciphertext        |
 |------------------------|--------------------------------------------------------------------|---------------------------------------------|-------------------|
 | **Substitution Cipher** | Replaces each character with another using a fixed rule (e.g., shift by 3 in Caesar cipher). | Shift H→K, E→H, L→O, O→R, W→Z, R→U, D→G      | `KHOOR ZRUOG`     |
-| **Transposition Cipher**| Rearranges the positions of characters without altering them (e.g., Rail Fence cipher with 2 rails). | Write zigzag: top rail `HLOWRD`, bottom rail `ELOL`, then read rows sequentially | `HLOWRDELOL`       |
+| **Transposition Cipher**| Rearranges the positions of characters without altering them (e.g., Rail Fence cipher with 2 rails). | Write zigzag: top rail `HLO WRD`, bottom rail `EL OL`, then read rows sequentially | `HLOWRDELOL`       |
 
 
 **Kerckhoffs’s Principle** states that a cryptographic system should remain secure even if everything about it—except the key—is known. This principle ensures that encryption algorithms can be publicly scrutinized for weaknesses without compromising their security. Proprietary, undisclosed encryption methods are generally discouraged, as security through obscurity is not a reliable defense.
 
 A **zero-knowledge proof** is a cryptographic method where one party can prove to another that they know a secret without revealing the secret itself. This concept is useful in authentication systems where users need to verify their identities without exposing passwords or private keys.
 
+### Open Questions ###
+
+1. What is cryptography and why is it important in cybersecurity?
+<details>
+  <summary>Show answer</summary>
+Cryptography is the science of securing information by transforming it into an unreadable format for unauthorized users while keeping it accessible to authorized parties. It is crucial for protecting sensitive data, securing communication, verifying identities, and ensuring trust in digital systems.
+</details>
+
+2. What are the four primary objectives of cryptography in cybersecurity?
+<details>
+  <summary>Show answer</summary>
+Confidentiality – ensures only authorized users can access information.
+
+Integrity – guarantees data has not been altered.
+
+Authenticity – confirms the identities of users or devices.
+
+Non-repudiation – prevents senders from denying their actions.
+</details>
+
+3. How do encryption and decryption processes work?
+<details>
+  <summary>Show answer</summary>
+Encryption: Converts plaintext into unreadable ciphertext using an algorithm and a key.
+
+Decryption: Converts ciphertext back into plaintext using the correct key.
+
+The security depends on the algorithm’s strength and the secrecy of the key.
+</details>
+
+4. What role does a key play in cryptography, and why does key size matter?
+<details>
+  <summary>Show answer</summary>
+A key controls how plaintext is transformed into ciphertext. The key size (e.g., 128-bit, 256-bit) determines encryption strength—larger keys create exponentially larger key spaces (e.g., AES-128 has 2^128 ≈ 3.4×10^38 keys), making brute-force attacks infeasible.
+</details>
+
+5. What are confusion and diffusion in encryption algorithms?
+<details>
+  <summary>Show answer</summary>
+Confusion makes the relationship between the key and ciphertext complex, hiding key patterns.
+
+Diffusion spreads plaintext influence across ciphertext so small plaintext changes cause major ciphertext changes, preventing pattern analysis.
+</details>
+
+6. What is the purpose of initialization vectors (IVs) and nonces?
+<details>
+  <summary>Show answer</summary>
+IVs and nonces introduce randomness into encryption or authentication processes to prevent repeated messages from producing identical ciphertext. This defends against replay attacks and pattern recognition.
+</details>
+
+7. How do substitution and transposition ciphers differ?
+<details>
+  <summary>Show answer</summary>
+Substitution ciphers replace each character with another (e.g., Caesar cipher shifting letters by 3: “HELLO” → “KHOOR”).
+
+Transposition ciphers rearrange character positions without changing them (e.g., Rail Fence cipher writing zigzag: “HELLO WORLD” → “HLOWRDELOL”).
+</details>
+
+8. What does Kerckhoffs’s Principle state and why is it important?
+<details>
+  <summary>Show answer</summary>
+It states that a cryptographic system should remain secure even if everything about the system—except the key—is public knowledge. This ensures algorithms can be openly tested for flaws and discourages reliance on “security through obscurity.”
+</details>
+
+---
+
+## 3.6.1 Cryptographic life cycle (e.g., keys, algorithm selection) ##
